--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "resolutions": {
     "autoprefixer": "10.4.5"
   },
+  "overrides": { "autoprefixer": "10.4.5" },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
