Adding work experience

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.7",
+    "request": "2.79.0",
     "style-components": "^0.1.0",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
@@ -24,7 +25,9 @@
   "resolutions": {
     "autoprefixer": "10.4.5"
   },
-  "overrides": { "autoprefixer": "10.4.5" },
+  "overrides": {
+    "autoprefixer": "10.4.5"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
